# syp

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  install.sh  open-ports.sh
services/backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  entrypoint.sh  learning-module-findings.md  pyproject.toml  quiz-module-findings.md  review_todo.md
services/backend/.claude/: settings.local.json
services/backend/.claude/agents/: code-implementer.md
services/backend/app/: __init__.py  main.py
services/backend/app/alembic/: env.py
services/backend/app/alembic/versions/: 19a36dc8705a_add_composite_index_user_role_on_quiz_.py  30e8ff7978c5_add_quiz_module_tables.py  3f21ababfc70_feat_learning_add_attempt_and_answer_.py  46599c599156_add_quiz_share_links.py  4ee3041509b5_merge_heads.py  8a2f0bd3b8f3_require_draft_version_on_edit_session.py  8b4c9f7a0e2d_add_quiz_versions_and_edit_sessions.py  b6c2e8a4f1d3_use_is_current_on_quiz_version.py  c33e11a76423_add_magic_link_token_table.py  d2bf9d1c6cf0_add_user_table.py
services/backend/app/core/: __init__.py  config.py  database.py  email.py  exceptions.py  security.py
services/backend/app/models/: __init__.py
services/backend/app/modules/auth/: __init__.py  dependencies.py  exception_handlers.py  exceptions.py  router.py
services/backend/app/modules/learning/: __init__.py  dependencies.py  exception_handlers.py  exceptions.py  router.py
services/backend/app/modules/llm/: __init__.py  constants.py  (+3 more)
services/backend/app/shared/: __init__.py  dependencies.py  enums.py  quiz_generation.py  schemas.py  strategy_registry.py  utils.py
services/backend/tests/: conftest.py
services/backend/tests/integration/: README.md  conftest.py  helpers.py  test_batch_tasks_flow.py  test_delete_account.py  test_quiz_edit_session_flow.py  test_quiz_update_flow.py  test_report_error.py  test_share_link_flow.py
(+187 files in other folders)
