[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Heinsberg",email = "tim.heinsberg@smail.th-koeln.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "python-multipart>=0.0.9",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "litellm>=1.55.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "freezegun>=1.5.0",
    "aiosqlite>=0.20.0",
]
[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
freezegun = "^1.5.5"
aiosqlite = "^0.22.0"
black = "^24.0.0"
add-trailing-comma = "^4.0.0"
pre-commit = "^4.5.1"
poethepoet = "^0.40.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.poe.tasks]
format = [
    {cmd = "add-trailing-comma app/**/*.py tests/**/*.py"},
    {cmd = "black app/ tests/"},
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
